fix(core): 修复了一些 bug， 设置session 过期时间 30 min